# psp_conjunction

./: .envrc  .gitignore  .nojekyll  .pre-commit-config.yaml  .pyproject.toml  CondaPkg.toml  Manifest.toml  Project.toml  README.md  _quarto-dev.yml  _quarto-man.yml  _quarto-web.yml  _quarto.yml  article.html  article.qmd  article.tex  association_results.txt  environment.yml  index.html  index.qmd  index.tex  justfile  listings.json  notes.html  notes.qmd  pixi.toml  psp.vap  psp_v.vap  pyproject.toml  robots.txt  search.json  wind_plasma.vap
1cc9a4820ad4da96/notebooks/: 00_notes.out.html
_manuscript/: index.html
_manuscript/notebooks/: 00_notes-preview.html  00_notes.out.ipynb  10_results-preview.html  10_results.out.ipynb
data/: psp_events.csv
data/enc11/: events_PSP_tr=20220225-20220227_method=fit_tau=0:00:16_ts=0:00:00.218454.arrow  updated_events_PSP_tr=20220225-20220227_method=fit_tau=0:00:16_ts=0:00:00.218454.arrow
data/enc7/: PSP_tr=20210114-20210121_detect_func=detect_variance_detect_kwargs=(tau=0:00:30,ts=0:00:00.218454)_method=fit.arrow  Wind_tr=20210115-20210123_detect_func=detect_variance_detect_kwargs=(tau=0:00:30,ts=0:00:00.092000)_method=fit.arrow  Wind_tr=20210115-20210123_updated_detect_func=detect_variance_detect_kwargs=(tau=0:00:30,ts=0:00:00.092000)_method=fit.arrow  events.PSP.arrow  events_PSP_tr=20210114-20210121_method=fit_tau=0:00:16_ts=0:00:00.218454.arrow  events_STEREO_tr=20210115-20210123_method=fit_tau=0:00:30_ts=0:00:00.125000.arrow  events_THEMIS_tr=20210115-20210123_method=fit_tau=0:00:30_ts=0:00:01.arrow  events_Wind_tr=20210115-20210123_method=fit_tau=0:00:30_ts=0:00:00.090909.arrow  updated_events_PSP_tr=20210114-20210121_method=fit_tau=0:00:16_ts=0:00:00.218454.arrow  updated_events_STEREO_tr=20210115-20210123_method=fit_tau=0:00:30_ts=0:00:00.125000.arrow  updated_events_THEMIS_tr=20210115-20210123_method=fit_tau=0:00:30_ts=0:00:01.arrow  (+1 more)
data/psp_e07/: Tp_spani_b.nc
data/psp_e08/: Tp_spani_b.nc
files/: bibexport.bib  overleaf.just  tex.just
lib/: Discontinuity.jl
notebooks/: .vdoc.a763f47c-8901-4bd3-9df6-8349fe894beb.jl  000_data.qmd  00_calc-preview.html  00_calc.html  00_calc.ipynb  00_calc.out.ipynb  00_index.qmd  00_notes-preview.html  00_notes.html  00_notes.ipynb  00_notes.out.ipynb  01_cor-preview.html  01_cor.embed.ipynb  01_cor.html  01_cor.out.ipynb  01_cor.qmd  01_demo.qmd  01_flux.qmd  01_psp-preview.html  01_psp.ipynb  01_psp.out.ipynb  01_psp_cor-preview.html  01_psp_cor.html  01_psp_cor.ipynb  01_psp_cor.out.ipynb  01_psp_events-preview.html  01_psp_events.ipynb  01_psp_events.out.ipynb  01_psp_examples.html  01_psp_overview-preview.html  01_psp_overview.html  01_psp_overview.ipynb  01_psp_overview.out.ipynb  01_swd_examples.html  01_swd_examples.ipynb  02_psp_events-preview.html  02_psp_events.html  02_psp_events.ipynb  02_psp_events.out.ipynb  02_stats-preview.html  (+29 more)
presentations/: grp.html  grp.qmd  grpMeeting202511.pptx  grp_dashboard_2024-02-05.html  index.qmd  index.typ  rMeeting.html  rMeeting.pptx  rMeeting.qmd  sparthb.html  sparthb.qmd  sparthb.revealjs.html
scripts/: data.py  plot.jl
src/: PSP.jl  PSPAnisotropy.jl  THEMIS.jl  Wind.jl  anisotropy.jl  anisotropy_plot.jl  anisotry.jl  associations.jl  calc.jl  data.jl  dataset.jl  io.jl  main.jl  meta.jl  mva.jl  plot.jl  psp_temp.jl  utils.jl
(+60 files in other folders)
