[project]
name = "psp"
version = "0.1.0"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
requires-python = ">= 3.10"
dependencies = [
    "pydantic",
    "polars",
    "speasy",
    "beforerr",
    "space_analysis",
    "discontinuitypy[plot]"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
ipykernel = "*"
xarray = "*"
numpy = "<2" # AttributeError: `newbyteorder` was removed from the ndarray class in NumPy 2.0. Use `arr.view(arr.dtype.newbyteorder(order))` instead.
netcdf4 = "*"

hvplot = ">=0.10.0"
jupyter_bokeh = "*"
bokeh = "*"

[tool.pixi.pypi-dependencies]
psp = { path = ".", editable = true }
great_tables = "*"
matplotlib = "*"

[tool.pixi.feature.local.pypi-dependencies]
beforerr = { path = "../../src/beforerr_dev", editable = true }
discontinuitypy = { path = "../discontinuitypy", editable = true }
space_analysis = { path = "../../src/space-analysis.py", editable = true }

[tool.pixi.environments]
dev = ["local"]
