[project]
name = "psp"
version = "0.1.1"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
requires-python = ">= 3.10"
dependencies = [
    "pydantic",
    "polars",
    "xarray",
    "speasy",
    "beforerr",
    "space_analysis",
    "discontinuitypy[plot]",
]

[project.optional-dependencies]
dev = ["ipykernel"]
plot = ["hvplot>=0.10.0", "jupyter_bokeh", "bokeh", "matplotlib", "great_tables"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
# numpy = "<2"    # AttributeError: `newbyteorder` was removed from the ndarray class in NumPy 2.0. Use `arr.view(arr.dtype.newbyteorder(order))` instead.
netcdf4 = "*"

[tool.pixi.feature.local.pypi-dependencies]
psp = { path = ".", editable = true }
beforerr = { path = "../../src/beforerr_dev", editable = true }
discontinuitypy = { path = "../discontinuitypy", editable = true }
space_analysis = { path = "../../src/space-analysis.py", editable = true }

[tool.pixi.environments]
dev = ["plot", "local"]
